--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Project</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Grid Advanced</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="navbar">
@@ -14,27 +17,83 @@
             </nav>
         </div>
         <div class="main">
-          
-            <img id="main_logo" src="./logo.png" alt="">
-     
-            <div class="main_content">
-                <h2>Your Own Home</h2>
-                <h1>The Ultimate Professional Freedom</h1>
-                <p id="main_p_first">VIEW OUR PEOPERTIES</p>
+            <div class="main_logo">
+                <img src="./logo.png" alt="" class="main_logo">
             </div>
-<div class="seen_on">
-    <div id="main_p">
-    <p id="first_p">Seen On</p></div>
-    <div id="partners">
-<img src="./logo-bbc.png" alt="">
-<img src="./logo-forbes.png" alt="">
-<img src="./logo-bi.png" alt="">
-<img src="./logo-techcrunch.png" alt=""></div>
-</div>
+            <div class="main_content">
+                <h2>YOUR OWN HOME</h2>
+                <h1>The ultimate personal freedom</h1>
+                <p> VIEW OUR PROPERTIES</p>
+            </div>
+            <div class="seen_on">
+                <p>SEEN ON</p>
+            </div>
+            <div class="partners">
+                <img src="./logo-bbc.png" alt="" class="partners_img">
+                <img src="./logo-forbes.png" alt="" class="partners_img">
+                <img src="./logo-bi.png" alt="" class="partners_img">
+                <img src="./logo-techcrunch.png" alt="" class="partners_img">
+            </div>
         </div>
         <div class="realtors">
-
+            <h3>Top 3 Realtors</h3>
+            <div class="realtors_details">
+                <img id="real_one" src="./realtor-1.jpeg" alt="">
+                <div id="name_one">
+                    <h5>Eric XYz</h5>
+                    <p> 423 house sold</p>
+                </div>
+                <img id="real_two" src="./realtor-2.jpeg" alt="">
+                <div class="name_two">
+                    <h5>Eric XYz</h5>
+                    <p> 423 house sold</p>
+                </div>
+                <img id="real_three" src="./realtor-3.jpeg" alt="">
+                <div class="name_three">
+                    <h5>Eric XYz</h5>
+                    <p> 423 house sold</p>
+                </div>
+            </div>
+        </div>
+        <div class="services">
+            <div class="serve">
+                <img src="./language_24dp_C69963_FILL0_wght400_GRAD0_opsz24.png" alt="serve1">
+                <h3>World's best luxury homes</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur
+                    voluptatibus </p>
+            </div>
+            <div class="serve">
+                <img src="./emoji_events_24dp_C69963_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                <h3>World's best luxury homes</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur
+                    voluptatibus </p>
+            </div>
+            <div class="serve">
+                <img src="./emoji_events_24dp_C69963_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                <h3>World's best luxury homes</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur
+                    voluptatibus </p>
+            </div>
+            <div class="serve">
+                <img src="./key_24dp_C69963_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                <h3>World's best luxury homes</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur
+                    voluptatibus </p>
+            </div>
+            <div class="serve">
+                <img src="./chart_data_24dp_C69963_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                <h3>World's best luxury homes</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur
+                    voluptatibus </p>
+            </div>
+            <div class="serve">
+                <img src="./lock_24dp_C69963_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                <h3>World's best luxury homes</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur
+                    voluptatibus </p>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
